# hack-services

./: README.md  env.sh  meson.build  meson_options.txt
game-state-service/: meson.build
game-state-service/data/: com.endlessm.GameStateService.xml
hack-sound-server/: meson.build
hack-sound-server/data/: com.endlessm.HackSoundServer.xml
hack-sound-server2/: meson.build
hack-sound-server2/client/: hack-sound-client.c  hack-sound-client.h  meson.build
hack-sound-server2/client/examples/: meson.build  play-on-server-quit.c  play.c
hack-sound-server2/data/: com.endlessm.HackSoundServer2.xml
