option(
    'enable-hss',
    type: 'boolean',
    value: true,
    description: 'Enable libraries generation for HackSoundServer'
)

option(
    'enable-hss2',
    type: 'boolean',
    value: true,
    description: 'Enable libraries generation for HackSoundServer2'
)

option(
    'enable-gss',
    type: 'boolean',
    value: true,
    description: 'Enable libraries generation for GameStateService'
)
