option(
    'sound_server',
    type: 'boolean',
    value: true,
    description: 'Enable libraries generation for HackSoundServer'
)

option(
    'sound_server2',
    type: 'boolean',
    value: true,
    description: 'Enable libraries generation for HackSoundServer2'
)

option(
    'game_state_service',
    type: 'boolean',
    value: true,
    description: 'Enable libraries generation for GameStateService'
)
